# cosmarium

./: AGENTS.md  CODING_GUIDELINES.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
cosmarium-app/: Cargo.toml
cosmarium-app/src/: app.rs  main.rs
cosmarium-core/: Cargo.toml
cosmarium-core/src/: application.rs  config.rs  document.rs  error.rs  events.rs  git.rs  layout.rs  lib.rs  plugin.rs  project.rs  session.rs
cosmarium-core/tests/: save_load_integration.rs
cosmarium-plugin-api/: Cargo.toml
cosmarium-plugin-api/src/: context.rs  event.rs  lib.rs  panel.rs  plugin.rs
cosmarium-plugins/atmosphere/: Cargo.toml
cosmarium-plugins/atmosphere/src/: classifier.rs  color.rs  downloader.rs  lib.rs
cosmarium-plugins/markdown-editor/: Cargo.toml
cosmarium-plugins/markdown-editor/src/: editor.rs  lib.rs  preview.rs  stats.rs  syntax.rs
cosmarium-plugins/outline/: Cargo.toml
cosmarium-plugins/outline/src/: lib.rs
docs/architecture/: ADR-001-project-file-format.md
