[package]
name = "cosmarium-app"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Main application for Cosmarium creative writing software"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cosmarium"
path = "src/main.rs"

[dependencies]
cosmarium-core = { path = "../cosmarium-core" }
cosmarium-plugin-api = { path = "../cosmarium-plugin-api" }
cosmarium-markdown-editor = { path = "../cosmarium-plugins/markdown-editor" }

eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = "0.14"
dirs = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
uuid = { workspace = true }

[features]
default = ["native"]
native = ["eframe/default"]
web = ["eframe/web_screen_reader"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"