[package]
name = "cosmarium-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core functionality for Cosmarium creative writing software"
keywords.workspace = true
categories.workspace = true

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
dirs = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

cosmarium-plugin-api = { path = "../cosmarium-plugin-api" }

[features]
default = []
hot-reload = ["libloading"]

[dependencies.libloading]
version = "0.8"
optional = true