[package]
name = "cosmarium-atmosphere"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dynamic atmosphere and theming plugin for Cosmarium"
keywords.workspace = true
categories.workspace = true

[dependencies]
cosmarium-plugin-api = { path = "../../cosmarium-plugin-api" }
egui = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
