[package]
name = "cosmarium-atmosphere"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dynamic atmosphere and theming plugin for Cosmarium"
keywords.workspace = true
categories.workspace = true

[dependencies]
cosmarium-plugin-api = { path = "../../cosmarium-plugin-api" }
egui = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# ML dependencies for emotion detection
tract-onnx = { version = "0.21", optional = true }
ndarray = { version = "0.15", optional = true }
tokenizers = { version = "0.15", optional = true }
reqwest = { version = "0.12", features = ["blocking", "stream"], optional = true }
indicatif = { version = "0.17", optional = true }
dirs = { version = "5.0", optional = true }

[features]
default = ["ml-emotions"]
ml-emotions = ["tract-onnx", "ndarray", "tokenizers", "reqwest", "indicatif"]

[lib]
crate-type = ["cdylib", "rlib"]
